# command-shelf

./: .gitattributes  .gitignore  AGENTS.md  README.md  design-qa.md  index.html  项目说明.md
docs/: 临时收集页开发计划.md  安装与使用说明.md
docs/ai-project/: 项目工作台.md
docs/product/: 产品构想.md
docs/release/: 安装与手工验收说明.md
frontend/: index.html
scripts/: desktop-smoke.mjs  release-candidate.ps1  临时收集回归.mjs  同步冲突界面回归.mjs  复制无刷新回归.mjs  生成安装包.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_service.rs  backup_store.rs  codex_cli.rs  command_store.rs  config_store.rs  error.rs  file_io.rs  git_repository.rs  lib.rs  main.rs  merge_engine.rs  model.rs  process_runner.rs
