[package]
name = "command-shelf"
version = "0.1.0"
description = "本地优先的个人常用命令看板"
authors = ["CommandShelf"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "command_shelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.11.3", features = [] }
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.20"
